[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["."]
line_length = 120

[tool.bandit]
skips = ["B101"]

[tool.poetry]
name = "picture-tool"
version = "0.1.0"
description = ""
authors = ["Dobatymo <dobatymo@users.noreply.github.com>"]
license = "ISC license"
packages = [
    {include = "picturetool"},
]

[[tool.poetry.source]]
name = "pypi-dlib-bin"
url = "https://pypi.org/simple/dlib-bin/"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
filemeta = ">=0.0.2"
genutility = {version = ">=0.0.101", extras = ["filesdb", "numpy", "pickle", "pillow"]}
humanize = ">=4.4.0"
imagehash = ">=4.3.1"
msgpack = ">=1.0.4"
natsort = ">=8.2.0"
networkx = ">=3.0"
numpy = ">=1.20"
pandas = ">=1.5.0"
pandasql = ">=0.7.3"
piexif = ">=1.1.3"
Pillow = ">=9.4.0"
pillow-heif = ">=0.7.0"
platformdirs = ">=3.5.0"
pyarrow = ">=10.0.1"
pyexiv2 = ">=2.7.1"
python-dateutil = ">=2.8.2"
requests = ">=2.28.1"
reverse-geocoder = ">=1.5.1"
threadpoolctl = ">=3.1.0"
tqdm = ">=4.0"
geopy = ">=2.3.0"
more-itertools = ">=5.0.0"
dlib = {version = ">=19.24", source = "pypi-dlib-bin", optional = true}
face-recognition = {version = "1.3.0", optional = true}
faiss-cpu = {version = ">=1.7.3", optional = true}
#Gooey = {version = ">=1.0", optional = true}
image-quality = {version = ">=1.2.7", optional = true}
turbojpeg = {version = ">=0.0.1", optional = true}
keras = {version = ">=2.4.0", optional = true}
kornia = {version = ">=0.6.9", optional = true}
lightning = {version = ">=2.0.0", optional = true}
opencv-python = {version = "4.5.4.60", optional = true}
opencv-contrib-python = {version = "4.5.4.60", optional = true}
piq = {version = ">=0.7.0", optional = true}
pyside2 = {version = ">=5.15.2.1", optional = true}
scikit-image = {version = "<0.19", optional = true}
tensorflow = {version = ">=2.3.0", optional = true}
torch = {version = ">=1.13.1", optional = true}
torchvision = {version = ">=0.14.1", optional = true}
torchmetrics = {version = ">=0.11.4", optional = true}
transformers = {version = ">=4.26.1", optional = true}

[tool.poetry.extras]
ml = ["dlib", "face-recognition", "faiss-cpu", "image-quality", "turbojpeg", "kornia", "lightning", "opencv-python", "opencv-contrib-python", "piq", "scikit-image", "torch", "torchvision", "torchmetrics", "transformers"]
ml_tf = ["keras", "tensorflow"]
gui = ["pyside2"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.19.0"
numba-progress = ">=0.0.4"
numba = ">=0.56.4"
dask = ">=2023.3.1"
annoy = ">=1.17.1"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
