[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "picture-tool"
version = "0.1.0"
description = ""
authors = [
  "Dobatymo <dobatymo@users.noreply.github.com>",
]
license = "ISC license"
packages = [
  { include = "picturetool" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
"backports.strenum" = [
  { version = ">=1.0.3", python = "<3.11" },
]
filemeta = ">=0.0.2"
geopy = ">=2.4.1"
genutility = { version = ">=0.0.103", extras = [
  "callbacks",
  "datetime",
  "filesdb",
  "numpy",
  "pickle",
  "pillow",
  "rich",
  "time",
] }
humanize = ">=4.10.0"
houtu = ">=0.0.3"
imagehash = ">=4.3.1"
msgpack = ">=1.1.0"
natsort = ">=8.4.0"
networkx = ">=3.1"
numpy = [
  { version = ">=1.20", python = "<3.12" },
  { version = ">=1.26", python = ">=3.12" },
]
pandas = ">=2.0.3"
pandasql = ">=0.7.3"
piexif = ">=1.1.3"
Pillow = ">=10.4.0"
pillow-heif = ">=0.7.0"
pillow-avif-plugin = ">=1.4.3"
platformdirs = ">=4.3.6"
pyarrow = ">=17.0.0"
pyexiv2 = ">=2.15.3"
python-dateutil = ">=2.8.2"
requests = ">=2.32.3"
threadpoolctl = ">=3.5.0"
rich = ">=13.9.3"
rich-argparse = ">=1.2.0"
more-itertools = ">=10.5.0"
rawpy = ">=0.19.1"
turbojpeg = ">=0.0.1"
typing-extensions = ">=4.0.0"
concurrex = { version = ">=0.0.1", optional = true }
dlib = { version = ">=19.24.6", optional = true }
face-recognition = { version = "1.3.0", optional = true }
faiss-cpu = { version = ">=1.7.3", optional = true }
#Gooey = {version = ">=1.0", optional = true}
image-quality = { version = ">=1.2.7", optional = true }
keras = { version = ">=2.11.0", optional = true }
kornia = { version = ">=0.7.3", optional = true }
lightning = { version = ">=2.3.3", optional = true }
opencv-contrib-python = { version = "4.5.5.64", optional = true }
piq = { version = ">=0.8.0", optional = true }
pyiqa = { version = ">=0.1.10", optional = true }
pyside2 = { version = ">=5.15.2.1", optional = true, python = "<3.9" }
pyside6 = { version = ">=6.8.0.2", optional = true, python = ">=3.9" }
scikit-image = [
  { version = "<0.19", optional = true, python = "<3.12" },
  { version = ">=0.22.0", optional = true, python = ">=3.12" },
]
tensorflow = { version = ">=2.3.0", optional = true }
torch = { version = ">=2.5.1", optional = true }
torchvision = { version = ">=0.20.1", optional = true }
torchmetrics = { version = ">=1.5.1", optional = true }
transformers = { version = ">=4.26.1", optional = true }
scikit-video = { version = ">=1.1.11", optional = true }
c2pa-python = { version = ">=0.5", optional = true }
cryptography = { version = ">=35.0", optional = true }
scipy = [
  { version = ">=1.0", python = "<3.12" },
  { version = ">=1.11", python = ">=3.12" },
] # only to fix dependency resolution
pywavelets = [
  { version = ">=1.0", python = "<3.12" },
  { version = ">=1.5", python = ">=3.12" },
] # only to fix dependency resolution
numba = [
  { version = ">=0.56", python = "<3.12" },
  { version = ">=0.59", python = ">=3.12" },
] # only to fix dependency resolution

[tool.poetry.extras]
ml = [
  "concurrex",
  "dlib",
  "face-recognition",
  "faiss-cpu",
  "image-quality",
  "kornia",
  "lightning",
  "opencv-contrib-python",
  "piq",
  "pyiqa",
  "scikit-image",
  "torch",
  "torchvision",
  "torchmetrics",
  "transformers",
]
ml_tf = [
  "keras",
  "tensorflow",
]
gui = [
  "pyside2",
  "pyside6",
]
c2pa = [
  "c2pa-python",
  "cryptography",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.19.0"
numba-progress = ">=0.0.4"
numba = ">=0.56.4"
dask = ">=2023.3.1"
annoy = ">=1.17.1"
py-cpuinfo = ">=9.0.0"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

lint.extend-select = [
  "B",
  "I",
]

[tool.isort]
profile = "black"
src_paths = [
  "picturetool",
]
line_length = 120

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.bandit]
skips = [
  "B101",
]

[tool.poetry-pyinstaller-plugin.scripts]
viewer-gui = { source = "scripts/viewer-gui.py", type = "onedir", bundle = false, windowed = true }
